fixed list in employeerepotest